# CodexPlusPlus

./: AGENTS.md  Cargo.toml
.workflow/: config.json  project.md  search-cache.json  search-daemon.json  spec-analytics.jsonl  state.json  wiki-index.json
.workflow.backup-20260628-183836/: search-cache.json  search-daemon.json  spec-analytics.jsonl  wiki-index.json
.workflow.backup-20260628-183836/specs/: architecture-constraints.md  coding-conventions.md  debug-notes.md  learnings.md  quality-rules.md  review-standards.md  test-conventions.md  ui-conventions.md
.workflow/specs/: .hit-log.jsonl  architecture-constraints.md  coding-conventions.md  debug-notes.md  learnings.md  quality-rules.md  review-standards.md  test-conventions.md  ui-conventions.md
apps/codex-plus-launcher/src/: main.rs
apps/codex-plus-manager/src/: App.tsx  styles.css
apps/codex-plus-manager/src-tauri/src/: commands.rs  lib.rs
apps/codex-plus-mobile-relay/: Cargo.toml
apps/codex-plus-mobile-relay/src/: main.rs
assets/inject/: renderer-inject.js
codex_session_delete/inject/: renderer-inject.js
crates/codex-plus-core/: Cargo.toml
crates/codex-plus-core/src/: launcher.rs  routes.rs  settings.rs  zed_remote.rs
crates/codex-plus-core/src/zed_remote/: registry.rs
crates/codex-plus-core/tests/: bridge_routes.rs  cdp_bridge.rs  model_catalog.rs  zed_remote.rs
tests/: test_renderer_script.py
