[package]
name = "codex-plus-mobile-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codex-plus-mobile-relay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
futures-util = { workspace = true, features = ["sink"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "signal", "sync"] }
tokio-tungstenite.workspace = true
